--- a/index.html
+++ b/index.html
@@ -18,8 +18,22 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Hello, world!</h1>
-
+    <div class="container">
+      <div class="row">
+          <div class="col-md-12">
+            <ul class="nav nav-tabs">
+              <li role="presentation" class="active"><a href="#">Admin</a></li>
+              <li role="presentation"><a href="#">User</a></li>
+            </ul>
+          </div>
+      </div>
+      <div class="row">
+          <div class="col-md-12 center-block">
+              <h1 class="text-center">List of Created Exams</h1>
+          </div>
+      </div>
+    </div>
+    
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
