--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <![endif]-->
   </head>
   <body>
-    <div class="container">
+    <div class="container" style="max-width: 700px;">
       <div class="row">
           <div class="col-md-12">
             <ul class="nav nav-tabs">
@@ -30,6 +30,37 @@
       <div class="row">
           <div class="col-md-12 center-block">
               <h1 class="text-center">List of Created Exams</h1>
+          </div>
+      </div>
+      <div class="exam-item">
+          <div class = "row">
+              <div class="col-md-8">
+                  <h3>Geometry</h3>
+              </div>
+              <div class="col-md-2">
+                  <a href="#"><h3>Edit</h3></a>
+              </div>
+              <div class="col-md-2">
+                  <a href="#"><h3>Delete</h3></a>
+              </div>
+          </div>
+      </div>
+      <div class="exam-item">
+          <div class = "row">
+              <div class="col-md-8">
+                  <h3>Chemistry</h3>
+              </div>
+              <div class="col-md-2">
+                  <a href="#"><h3>Edit</h3></a>
+              </div>
+              <div class="col-md-2">
+                  <a href="#"><h3>Delete</h3></a>
+              </div>
+          </div>
+      </div>
+      <div class="row">
+          <div class="col-md-12">
+              <button type="button" class="btn btn-success" style="width: 100%">Add Exam!</button>
           </div>
       </div>
     </div>
