--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class="col-md-12">
             <ul class="nav nav-tabs">
               <li role="presentation" class="active"><a href="#">Admin</a></li>
-              <li role="presentation"><a href="#">User</a></li>
+              <li role="presentation"><a href="user.html">User</a></li>
             </ul>
           </div>
       </div>
