--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="row">
           <div class="col-md-12">
             <ul class="nav nav-tabs">
-              <li role="presentation" class="active"><a href="#">Admin</a></li>
+              <li role="presentation" class="active"><a href="index.html">Admin</a></li>
               <li role="presentation"><a href="#">User</a></li>
             </ul>
           </div>
@@ -60,11 +60,10 @@
       </div>
       <div class="row">
           <div class="col-md-12">
-              <button type="button" class="btn btn-success" style="width: 100%">Add Exam!</button>
+              <a href="AddExam.html"><button type="button" class="btn btn-success" style="width: 100%">Add an Exam</button></a>
           </div>
       </div>
     </div>
-    
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
