--- a/user.html
+++ b/user.html
@@ -37,7 +37,7 @@
         <ul class="nav nav-tabs">
           <li role="presentation" class="active"><a href="#">Exams</a></li>
           <li role="presentation"><a href="edit_profile.html">Profile</a></li>
-          <li role="presentation"><a href="report.html">Report</a></li>
+          <li role="presentation"><a href="list_exam_reports.html">Report</a></li>
 
         </ul>
       </div>
