--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               
               <li role="presentation"><a href="user.html">User</a></li>
               <li role="presentation" class="active"><a href="index.html">Admin</a></li>
-              <li role="presentation"><a href="#">User</a></li>
+              <li role="presentation"><a href="user.html">User</a></li>
             </ul>
           </div>
       </div>
