--- a/login.html
+++ b/login.html
@@ -1,20 +1,84 @@
+<html lang="en">
+    <head>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+      <title>Login</title>
 
-<html lang="en"> 
-<head>
-  <meta charset="utf-8">
-  <title>Login Form</title>
+      <!-- Bootstrap -->
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
-</head>
-<body>
-  <section class="container">
-    <div class="login">
-      <h1>Login to Dashboard</h1>
-      <form method="post" action="signIn.php">
-        <p><input type="text" name="email" value="" placeholder="Email"></p>
-        <p><input type="password" name="password" value="" placeholder="Password"></p>
-        <p class="submit"><input type="submit" name="commit" value="Login"></p>
-      </form>
-    </div>
-  </section>
-</body>
+      <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+      <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+      <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+      <![endif]-->
+    </head>
+    <body>
+      <div class="container">
+          <div id="loginbox" style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+              <div class="panel panel-info" >
+                      <div class="panel-heading">
+                          <div class="panel-title">Sign In</div>
+                      </div>
+
+                      <div style="padding-top:30px" class="panel-body" >
+
+                          <div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
+
+                          <form id="loginform" class="form-horizontal" role="form">
+
+                              <div style="margin-bottom: 25px" class="input-group">
+                                          <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                                          <input id="login-email" type="text" class="form-control" name="email" value="" placeholder="email">
+                                      </div>
+
+                              <div style="margin-bottom: 25px" class="input-group">
+                                          <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                                          <input id="login-password" type="password" class="form-control" name="password" placeholder="password">
+                                      </div>
+
+
+
+                              <div class="input-group">
+                                        <div class="checkbox">
+                                          <label>
+                                            <input id="login-remember" type="checkbox" name="remember" value="1"> Remember me
+                                          </label>
+                                        </div>
+                                      </div>
+
+
+                                  <div style="margin-top:10px" class="form-group">
+                                      <!-- Button -->
+
+                                      <div class="col-sm-12 controls">
+                                        <!-- HERE use the PHP link for the login -->
+                                        <a id="btn-login" href="#" class="btn btn-success">Login  </a>
+
+                                      </div>
+                                  </div>
+
+
+                                  <div class="form-group">
+                                      <div class="col-md-12 control">
+                                          <div style="border-top: 1px solid#888; padding-top:15px; font-size:85%" >
+                                              Don't have an account!
+                                          <a href="signup.html">
+                                              Sign Up Here
+                                          </a>
+                                          </div>
+                                      </div>
+                                  </div>
+                              </form>
+
+
+
+                          </div>
+                      </div>
+          </div>
+      </div>
+       </body>
 </html>
