--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 
-<html lang="en"> 
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <title>Login Form</title>
@@ -17,4 +17,7 @@
     </div>
   </section>
 </body>
+<script src="js/bootbox.min.js"></script>
+
+
 </html>
