--- a/list_exam_reports.html
+++ b/list_exam_reports.html
@@ -90,11 +90,13 @@
         }
         $("#show_report").on('click',function(){
           window.location.href = "exam_report.html"
-          
+
         });
 
       });
     </script>
+    <script src="js/bootbox.min.js"></script>
+    
 </body>
 
 </html>
