--- a/signup.html
+++ b/signup.html
@@ -37,33 +37,33 @@
                                 <div class="form-group">
                                     <label for="email" class="col-md-3 control-label">Email</label>
                                     <div class="col-md-9">
-                                        <input type="text" class="form-control" name="email" placeholder="Email Address">
+                                        <input  id="signup-email" type="text" class="form-control" name="email" placeholder="Email Address">
                                     </div>
                                 </div>
 
                                 <div class="form-group">
                                     <label for="firstname" class="col-md-3 control-label">First Name</label>
                                     <div class="col-md-9">
-                                        <input type="text" class="form-control" name="firstname" placeholder="First Name">
+                                        <input id="signup-fname" type="text" class="form-control" name="firstname" placeholder="First Name">
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="lastname" class="col-md-3 control-label">Last Name</label>
                                     <div class="col-md-9">
-                                        <input type="text" class="form-control" name="lastname" placeholder="Last Name">
+                                        <input  id="signup-lname" type="text" class="form-control" name="lastname" placeholder="Last Name">
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="password" class="col-md-3 control-label">Password</label>
                                     <div class="col-md-9">
-                                        <input type="password" class="form-control" name="passwd" placeholder="Password">
+                                        <input id="signup-password" type="password" class="form-control" name="passwd" placeholder="Password">
                                     </div>
                                 </div>
 
                                 <div class="form-group">
                                     <!-- Button -->
                                     <div class="col-md-offset-3 col-md-9">
-                                        <button id="btn-signup" type="button" class="btn btn-info"><i class="icon-hand-right"></i> &nbsp Sign Up</button>
+                                        <button id="btn-signup" type="button" class="btn btn-info" onclick="signUp()"> &nbsp Sign Up</button>
                                     </div>
                                 </div>
 
@@ -77,4 +77,27 @@
          </div>
     </div>
      </body>
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+     <!-- Include all compiled plugins (below), or include individual files as needed -->
+     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+     <script src="js/bootbox.min.js"></script>
+     <script>
+
+     function signUp(){
+          $.get("/php/signUp.php", { email: $("#signup-email").val() , password: $("#signup-password").val() , fname:$("#signup-fname").val() , lname:$("#signup-lname").val() },
+          function ( data ) {
+            if(data == null){
+              bootbox.confirm("wrong Entery", function(result) {
+                location.reload();
+            });
+            } else {
+            bootbox.confirm("Welcome to our site", function(result) {
+               window.open("/user.html");
+             }
+           );}
+          },
+           "json");
+        }
+     </script>
+     <script src="js/bootbox.min.js"></script>
  </html>
