Finished 50% of Take Exam functionality
Still remaining:
- generate the next questions
- User Submission
- Time Finish Date and end exam at that time

--- a/StartExam.html
+++ b/StartExam.html
@@ -52,101 +52,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <script src="js/bootbox.min.js"></script>
 
-    <script>
-        $(document).ready(function() {
-
-            options = ["yes", "no"];
-            question = "Are you human?";
-            id = 1;
-
-            addSolvableQuestion(id,question,options);
-
-            options = ["yes", "no"];
-            question = "Are you robot?";
-            id = 2;
-
-            addSolvableQuestion(id,question,options);
-
-            var examTime = 1000;
-            var count = 1000 * 60;
-            var counter = setInterval(timer, 1000); //1000 will  run it every 1 second
-
-            function timer()
-            {
-                count = count - 1;
-                if (count == -1) {
-                    clearInterval(counter);
-                    //Exam Time is Done!
-                    return;
-                }
-
-                var seconds = count % 60;
-                var minutes = Math.floor(count / 60);
-                var hours = Math.floor(minutes / 60);
-                minutes %= 60;
-                hours %= 60;
-                $('#hours').html('H:');
-                $('#hours').append(hours);
-                $('#minutes').html('M:');
-                $('#minutes').append(minutes);
-                $('#seconds').html('S:');
-                $('#seconds').append(seconds);
-
-            }
-        });
-        isFirstAdded = true;
-        function addSolvableQuestion(id, question, options)
-        {
-            var questionHTML="";
-            if(isFirstAdded)
-            {
-                questionHTML += "<form class=\"form-horizontal\" id=\"question-"+id+"\">";
-                isFirstAdded = false
-            }
-            else
-            {
-                questionHTML += "<form class=\"form-horizontal\" id=\"question-"+id+"\" style = 'display: none'>";
-            }
-            questionHTML += "<fieldset>";
-            questionHTML += "<div class=\"form-group\">";
-            questionHTML += "  <label class=\"col-md-4 control-label\" for=\"radios\">"+question+"<\/label>";
-            questionHTML += '<div class="col-md-4">';
-
-            for (i = 0; i < options.length; i++)
-            {
-                  questionHTML += '<div class="radio">';
-                  questionHTML += '<label for="option-'+i+'">';
-                  questionHTML += '<input type="radio" name="radios" id="option-'+i+'" value="option-'+i+'">';
-                  questionHTML += options[i];
-                  questionHTML += '</label>';
-                  questionHTML += '</div>';
-            }
-
-            questionHTML += "  <\/div>";
-            questionHTML += "<\/div>";
-            questionHTML += "";
-            questionHTML += '<button id = "next-button-'+id+'" type="button" onclick = "nextQuestion(this)" class="btn btn-primary" style="width: 100%">Save & Next Question</button>';
-            questionHTML += '<button id = "end-button-'+id+'" type="button" onclick = "submitExam(this)" class="btn btn-success" style="width: 100%">Save & Exit</button>';
-            questionHTML += "<\/fieldset>";
-            questionHTML += "<\/form>";
-
-            $('#solvable-questions').append(questionHTML);
-        }
-        function nextQuestion(button)
-        {
-            prep = button.id.split('-');
-            questionID = '#' + 'question-' + prep[2];
-            $(questionID).css('display','none');
-            prepNextID = parseInt(prep[2]) + 1;
-            nextQuestionID = '#' + 'question-' + prepNextID;
-            $(nextQuestionID).css('display', 'block');
-        }
-        function submitExam(button)
-        {
-            //Code to submit and save the user progress
-
-        }
-</script>
+    <script src="/js/startExam.js"></script>
 
 
   </body>
