--- a/user.html
+++ b/user.html
@@ -150,6 +150,18 @@
     }
 
     });
+
+    function startExam(button)
+    {
+      var examId = button.id.split("take-").join("");
+      $.get("/php/startExam.php", {examId: examId},
+      function( data ) {
+          start(data.ENO);
+      },
+       "json"
+      );
+
+    }
   </script>
 </body>
 
